Ben's comments, some fixes

--- a/ms_2_intro_res_disc.Rmd
+++ b/ms_2_intro_res_disc.Rmd
@@ -97,7 +97,7 @@ Species found in the lower right quadrant (n = `r n_q3`) often represent cases o
 
 The most vexing cases are in the lower left quadrant (n = `r n_q4`), where neither distribution nor area match well. Data-poor species are more common in this quadrant; indeed, the median number of species occurrence records (averaging OBIS and GBIF occurrences) for this quadrant is `r med_occ_q4` records, compared to a median of `r med_occ_q123` records for species across the other three quadrants.  When extrapolating from limited observations, the AquaMaps model often predicts species presence well beyond known occurrences, introducing commission errors; at the same time, IUCN range maps generally target known occurrences, possibly introducing omission errors for data-limited species.
 
-While we examined IUCN Red List extinction risk categories by quadrant, expecting to see more concurrence between maps for species of concern; however, we found no compelling patterns (SI Fig. XXX).
+We examined IUCN Red List extinction risk categories by quadrant, expecting to see more concurrence between maps for species of concern; however, we found no compelling patterns (SI Fig. XXX).
 
 -----
 
@@ -114,7 +114,7 @@ We recalculated the OHI species status score under several scenarios to observe 
  The slight bump in mean score for scenario 2 may indicate a small increase in spatial representation of low-risk species, a small decrease in spatial representation of high-risk species, or a combination of both. 
  The large decrease shown in scenario 3 indicates that a zero threshold greatly increases the spatial representation of high-risk species.  
  
-Given that only `r format(p_both_all, big.mark = ',')` percent of species overlap, it is surprising that changing the priority for overlapping species from IUCN maps to AquaMaps would result in such large country-level score shifts as seen in scenarios 2 and 3.  While many country scores showed only small variation across all three scenarios, select countries gained up to 5 points while others dropped as many as 12 points.  Significantly, the global score decreased by two full points in scenario 3, indicating that an arbitrary change in how the two datasets are combined can result in a more dire assessment of species conservation status. 
+Given that only `r format(p_both_all, big.mark = ',')`% of species overlap, it is surprising that changing the priority for overlapping species from IUCN maps to AquaMaps would result in such large country-level score shifts as seen in scenarios 2 and 3.  While many country scores showed only small variation across all three scenarios, select countries gained up to 5 points while others dropped as many as 12 points.  Significantly, the global score decreased by two full points in scenario 3, indicating that an arbitrary change in how the two datasets are combined can result in a more dire assessment of species conservation status. 
 
 -----  
 
@@ -122,7 +122,7 @@ Given that only `r format(p_both_all, big.mark = ',')` percent of species overla
 
 Klein et al. (2015) compare the global distribution of species to the global distribution of marine protected areas to assess how well the MPAs protect key species and identify which species fall through gaps in protection.  The study relied on the AquaMaps database, using a probability of occurrence threshold of 50% or greater, to determine species presence, and the World Database of Protected Areas to define zones of marine protection.  The study determined that the global MPA network is woefully inadequate in protecting marine biodiversity: 90.5% of species have less than 5% of their overall range represented within MPAs and 1.4% of species have no protection at all ("gap" species).
 
- (<a href = '#fig5'>Figure 5</a>) displays the results of applying this methodology under new scenarios.  When comparing the conclusions based upon an IUCN-only scenario to an AquaMaps-only scenario (using 2015 AquaMaps data and a 0% threshold sets the most meaningful comparison to IUCN's "limits of distribution") we found a five-fold increase in the proportion of gap species (6.4% of species vs. 1.2%) and dramatically larger proportion of species with less than 2% of their range protected (73.2% of species vs. 47.7%).  However, this comparison also indicates a larger proportion of well-protected species with greater than 10% of range protected (2.9% of species vs. 1.5%).  Conclusions drawn from each of these datasets would paint dramatically different pictures of the protection afforded by our current global MPA network. 
+<a href = '#fig5'>Figure 5</a> displays the results of applying this methodology under new scenarios.  When comparing the conclusions based upon an IUCN-only scenario to an AquaMaps-only scenario (using 2015 AquaMaps data and a 0% threshold sets the most meaningful comparison to IUCN's "limits of distribution") we found a five-fold increase in the proportion of gap species (6.4% of species vs. 1.2%) and dramatically larger proportion of species with less than 2% of their range protected (73.2% of species vs. 47.7%).  However, this comparison also indicates a larger proportion of well-protected species with greater than 10% of range protected (2.9% of species vs. 1.5%).  Conclusions drawn from each of these datasets would paint dramatically different pictures of the protection afforded by our current global MPA network. 
  
 ___working on checking why so many gaps and 10+ species show up with IUCN.  I will write up a paragraph once I've had a little more time to examine maps___
 
