--- a/data_explore/data_explore_global_maps.Rmd
+++ b/data_explore/data_explore_global_maps.Rmd
@@ -1,5 +1,34 @@
 ###Global representation of species
 
+```{r setup, echo = FALSE, warning = FALSE, message = FALSE, eval = FALSE}
+
+# Libraries and Paths
+
+library(ggplot2)
+library(maps)
+library(readr)
+library(data.table)
+library(raster)
+library(tidyr)
+library(dplyr)
+library(stringr)
+
+dir_N <- c('Windows' = '//neptune.nceas.ucsb.edu/data_edit',
+           'Darwin'  = '/Volumes/data_edit',
+           'Linux'   = '/var/data/ohi')[[ Sys.info()[['sysname']] ]]
+
+dir_git <- '~/github/IUCN-AquaMaps'
+  
+dir_anx <- file.path(dir_N, 'git-annex/globalprep/SPP_ICO')
+dir_fig <- file.path(dir_git, 'figures')
+dir_data <- file.path(dir_git, 'data')
+
+if(basename(getwd()) != 'data_explore') setwd('data_explore')
+source('data_explore_fxns.R')
+### When knitting this, it automatically sets WD to be this directory...
+### the 'setwd()' is there for running by chunk
+```
+
 By counting the number of unique species are found in each of the half degree cells we can then create a single global raster of number of species.
 
 ```{r read_am_and_iucn_data, echo = FALSE, warning = FALSE, message = FALSE, eval = FALSE}
@@ -20,90 +49,13 @@ loiczid_raster       <- raster(loiczid_raster_file)
 names(loiczid_raster) <- 'loiczid'
 ```
 
-```{r global map matched species, echo = FALSE, warning = FALSE, message = FALSE, eval = FALSE}
+```{r global_maps, echo = FALSE, warning = FALSE, message = FALSE, eval = FALSE}
 
 library(rasterVis)
 
-cat('First off: map-paired species.  Map 1: AM dataset; map 2: IUCN dataset; maps 3 & 4: log-transformed AM & IUCN\n')
-
-### find total species in each dataset for later percent calcs
-# am_n_tot   <- am_spp_cells %>% 
-#   filter(am_sid %in% unique(spp_list$am_sid)) %>%
-#   dplyr::select(am_sid) %>% 
-#   unique() %>% nrow()
-# iucn_n_tot <- iucn_spp_cells %>% 
-#   filter(sciname %in% unique(spp_list$sciname)) %>%
-#   dplyr::select(sciname) %>% 
-#   unique() %>% nrow()
-### good - the same number
-
-### Number of aquamaps species per cell
-iucn_pair_rast_file <- file.path(dir_data, 'rasters/iucn_pair_rast.tif')
-am_pair_rast_file   <- file.path(dir_data, 'rasters/am_pair_rast.tif')
-
-if(!file.exists(iucn_pair_rast_file) | !file.exists(am_pair_rast_file)) {
-  am_n_per_cell <- am_spp_cells %>%
-  filter(am_sid %in% unique(spp_list$am_sid)) %>%
-  group_by(loiczid) %>%
-  summarize(count_am = n()) %>%
-#   summarize(count_am = n(),
-#             pct_am = count_am/am_n_tot) %>%
-  as.data.frame()
-
-  am_sp_map <- subs(loiczid_raster, am_n_per_cell[ , c('loiczid', 'count_am')], 
-                    by = 'loiczid', 
-                    which = 'count_am', 
-                    subsWithNA = TRUE)
-  
-  ### Number of IUCN species per cell
-  iucn_n_per_cell <- iucn_spp_cells %>%
-    group_by(loiczid) %>%
-    summarize(count_iucn = n()) %>%
-  #   summarize(count_iucn = n(),
-  #             pct_iucn = count_iucn/iucn_n_tot) %>%
-    as.data.frame()
-  
-  iucn_sp_map <- subs(loiczid_raster, iucn_n_per_cell[ , c('loiczid', 'count_iucn')], 
-                      by = 'loiczid', 
-                      which = 'count_iucn', 
-                      subsWithNA = TRUE)
-  
-  writeRaster(iucn_sp_map, filename = iucn_pair_rast_file, overwrite = TRUE)
-  writeRaster(am_sp_map, filename = am_pair_rast_file, overwrite = TRUE)
-} else {
-  am_sp_map   <- raster(am_pair_rast_file)
-  iucn_sp_map <- raster(iucn_pair_rast_file)
-}
-
-am_ln_map <- log(am_sp_map + 1)
-iucn_ln_map <- log(iucn_sp_map + 1)
-
-### Plot both maps
 myTheme <- rasterTheme(region = brewer.pal('Blues', n = 9))
 
-levelplot(am_sp_map, par.settings = myTheme, 
-#          main = 'Aquamaps Dataset', 
-          colorkey = list( at = seq(0, 1063, length = 15)))
-
-levelplot(iucn_sp_map, par.settings = myTheme, 
-#          main = 'IUCN Dataset', 
-          colorkey = list(at = seq(0, 1063, length = 15)))
-
-levelplot(am_ln_map, par.settings = myTheme, 
-#          main = 'Aquamaps Dataset', 
-          colorkey = list( at = seq(0, maxValue(am_ln_map), length = 15)))
-
-levelplot(iucn_ln_map, par.settings = myTheme, 
-#          main = 'IUCN Dataset', 
-          colorkey = list(at = seq(0, maxValue(iucn_ln_map), length = 15)))
-
-```
-
-Now look at full aquamaps species
-
-```{r all_aquamaps, eval = FALSE, echo = FALSE}
-
-cat('Full AM dataset, species richness\n')
+message('Full AM dataset, species count\n')
 
 all_am_rast_file   <- file.path(dir_data, 'rasters/am_all_rast.tif')
 
@@ -113,16 +65,9 @@ if(!file.exists(all_am_rast_file)) {
   am_spp_cells_big <- fread(file.path(dir_am_data, 'hcaf_sp_native_trunc.csv')) %>%
     as.data.frame(stringsAsFactors = FALSE)
   
-  ### find total spp to allow for percent calcs later
-  # am_all_n_tot <- am_spp_cells_big %>% 
-  #   dplyr::select(SpeciesID) %>% 
-  #   unique() %>% nrow()
-  
   all_am <- am_spp_cells_big %>%
     group_by(loiczid) %>%
     summarize(all_count = n()) %>%
-  #   summarize(all_count = n(),
-  #             all_pct   = all_count/am_all_n_tot) %>%
     as.data.frame()
   
   all_am_map <- subs(loiczid_raster, all_am[ , c('loiczid', 'all_count')], 
@@ -136,30 +81,29 @@ if(!file.exists(all_am_rast_file)) {
   all_am_map   <- raster(all_am_rast_file)
 }
 
+### set up boundaries - from http://oscarperpinan.github.io/rastervis/FAQ.html#sec-7
+ext <- as.vector(extent(all_am_map))
+
+boundaries <- maps::map('world', fill=TRUE,
+    xlim=ext[1:2], ylim=ext[3:4],
+    plot=FALSE)
+
+## read the map2SpatialPolygons help page for details
+IDs <- sapply(strsplit(boundaries$names, ":"), function(x) x[1])
+bPols <- maptools::map2SpatialPolygons(boundaries, IDs = IDs,
+                              proj4string = CRS(projection(all_am_map)))
+
+### create plot, add boundary polygons
 am_levelplot1 <- levelplot(all_am_map, 
-#                           main = 'Entire Aquamaps Dataset',
-                           par.settings = myTheme)
+                           scales = list(at = seq(-180, 180, 45)),
+                           xlab = NULL, ylab = NULL,
+                           par.settings = myTheme) + 
+  layer(sp.polygons(bPols, fill = 'grey90', col = 'grey30', lwd = .25))
 
-# all_am_ln_map <- log(all_am_map + 1)
-# all_am_ln_map <- all_am_ln_map/maxValue(all_am_ln_map)
-# am_levelplot1 <- levelplot(all_am_ln_map, par.settings = myTheme, main = 'Entire Aquamaps Dataset: log-transformed relative species richness', 
-#           colorkey = list(at = seq(0, 1, length = 15)))
-
+png(file.path(dir_fig, 'all_aquamaps_map1.png'),
+    width = 8.7, height = 6, units = 'in', res = 300)
 print(am_levelplot1)
-# print(am_levelplot2)
-
-# am_ln_pts <- as.data.frame(rasterToPoints(all_am_ln_map))
-# spp_richness_am_plot <- ggplot(am_ln_pts, aes(x = x, y = y)) +
-#   ggtheme_map + 
-#   geom_raster(aes(fill = layer), alpha = .7) +
-#   scale_fill_continuous(low = 'white', high = 'blue') +
-#   borders('world', color='gray40', fill='gray45', size = .1) +  # create a layer of borders
-#   scale_x_continuous(breaks = seq(-180, 180, by = 30), expand = c(0, 2)) +
-#   scale_y_continuous(breaks = seq( -90,  90, by = 30), expand = c(0, 2)) +
-#   labs(title = 'AquaMaps Dataset: log-transformed relative species richness', x = NULL, y = NULL, fill = NULL) 
-# 
-# spp_richness_am_plot
-# ggsave(file.path(dir_fig, 'all_am_ln_map.png'), height = 4, width = 8)
+dev.off()
 
 ```
 
@@ -167,7 +111,7 @@ Now look at full IUCN species
 
 ```{r all_iucn, eval = FALSE, echo = FALSE}
 
-cat('Full IUCN dataset, species richness\n')
+message('Full IUCN dataset, species count\n')
 
 all_iucn_rast_file   <- file.path(dir_data, 'rasters/iucn_all_rast.tif')
 dir_data_iucn <- file.path(dir_N, 'git-annex/globalprep/_raw_data/iucn_spp')
@@ -177,16 +121,9 @@ if(!file.exists(all_iucn_rast_file)) {
   iucn_spp_cells_all <- fread(iucn_cells_file) %>%
         as.data.frame(stringsAsFactors = FALSE)
   
-  ### find total spp to allow for percent calcs later
-  # am_all_n_tot <- am_spp_cells_big %>% 
-  #   dplyr::select(SpeciesID) %>% 
-  #   unique() %>% nrow()
-  
   all_iucn <- iucn_spp_cells_all %>%
     group_by(loiczid) %>%
     summarize(all_count = n()) %>%
-  #   summarize(all_count = n(),
-  #             all_pct   = all_count/am_all_n_tot) %>%
     as.data.frame()
   
   all_iucn_map <- subs(loiczid_raster, all_iucn[ , c('loiczid', 'all_count')], 
@@ -198,34 +135,19 @@ if(!file.exists(all_iucn_rast_file)) {
 
 } else {
   all_iucn_map   <- raster(all_iucn_rast_file)
+  values(all_iucn_map)[is.na(values(all_am_map))] <- NA
 }
 
 iucn_levelplot1 <- levelplot(all_iucn_map, 
-                             #main = 'Entire IUCN Dataset',
-                             par.settings = myTheme)
+                             scales = list(at = seq(-180, 180, 45)),
+                             xlab = NULL, ylab = NULL,
+                             par.settings = myTheme) + 
+  layer(sp.polygons(bPols, fill = 'grey90', col = 'grey30', lwd = .25))
 
-# all_iucn_ln_map <- log(all_iucn_map + 1)
-# all_iucn_ln_map <- all_iucn_ln_map/maxValue(all_iucn_ln_map)
-# iucn_levelplot2 <- levelplot(all_iucn_ln_map, 
-#           par.settings = myTheme, 
-#           margin = list(axis = TRUE),
-#           main = 'Entire IUCN Dataset: log-transformed relative species richness', 
-#           colorkey = list(at = seq(0, 1, length = 15)))
-
+png(file.path(dir_fig, 'all_iucn_map1.png'),
+    width = 8.7, height = 6, units = 'in', res = 300)
 print(iucn_levelplot1)
-# print(iucn_levelplot2)
-# iucn_ln_pts <- as.data.frame(rasterToPoints(all_iucn_ln_map))
-# spp_richness_iucn_plot <- ggplot(iucn_ln_pts, aes(x = x, y = y)) +
-#   ggtheme_map + 
-#   geom_raster(aes(fill = layer), alpha = .7) +
-#   scale_fill_continuous(low = 'white', high = 'blue') +
-#   borders('world', color='gray40', fill='gray45', size = .1) +  # create a layer of borders
-#   scale_x_continuous(breaks = seq(-180, 180, by = 30), expand = c(0, 2)) +
-#   scale_y_continuous(breaks = seq( -90,  90, by = 30), expand = c(0, 2)) +
-#   labs(title = 'IUCN Dataset: log-transformed relative species richness', x = NULL, y = NULL, fill = NULL) 
-# 
-# spp_richness_iucn_plot
-# ggsave(file.path(dir_fig, 'all_iucn_ln_map.png'), height = 4, width = 8)
+dev.off()
 
 ```
 
