--- a/ms_1_abst_sig.Rmd
+++ b/ms_1_abst_sig.Rmd
@@ -3,11 +3,11 @@
 
 _Abstract. Provide an abstract of no more than 250 words on page 2 of the manuscript. Abstracts should explain to the general reader the major contributions of the article. References in the abstract must be cited in full within the abstract itself and cited in the text._
 
-Species distribution data provide the foundation for a wide range of ecological research studies and conservation management decisions, yet most species ranges remain unknown, and existing range maps often suffer from data limitations and show inconsistencies.  AquaMaps (Kaschner et al. ___2015???___) and the International Union for Conservation of Nature (IUCN) (IUCN 2015) are two distinct efforts to map marine species distributions at a global scale.  Together these two databases represent `r format(n_spp_all, big.mark = ',')` species (`r format(p_spp_am, big.mark = ',')`% within AquaMaps, `r format(p_spp_iucn, big.mark = ',')`% within IUCN), with only `r format(n_spp_both, big.mark = ',')` species included in both.  Here we examine differences in predicted species ranges between the two datasets, and find that these misalignments mainly result from divergent methodologies that introduce differing frequencies of commission and omission errors.  We illustrate the scientific and management implications of these differences by repeating two recent applications - an assessment of global biodiversity within the Ocean Health Index (Halpern et al. 2012, 2015) and a global analysis of gaps in coverage of marine protected areas (Klein et al. 2015) - and find significantly different estimates of the status of global biodiversity and effectiveness of conservation depending on how the two datasets were prioritized. Until a single, highly accurate dataset of global marine species ranges becomes available, understanding the implications of dataset differences for conservation planning and decision-making will be essential.
+Species distribution data provide the foundation for a wide range of ecological research studies and conservation management decisions, yet most species ranges remain unknown, and existing range maps often suffer from data limitations and show inconsistencies.  AquaMaps and the International Union for Conservation of Nature (IUCN) are two distinct efforts to map marine species distributions at a global scale.  Together these databases represent `r format(n_spp_all, big.mark = ',')` species (`r format(p_spp_am, big.mark = ',')`% within AquaMaps, `r format(p_spp_iucn, big.mark = ',')`% within IUCN), with only `r format(n_spp_both, big.mark = ',')` shared species.  Here we examine differences in predicted species ranges between the two datasets and find that these misalignments mainly result from divergent methodologies that introduce differing frequencies of commission and omission errors.  We illustrate the scientific and management implications of these differences by repeating two recent applications - an assessment of global biodiversity within the Ocean Health Index and a global analysis of gaps in coverage of marine protected areas - and find significantly different results depending on how the two datasets were used.  Until a single, highly accurate dataset of global marine species ranges becomes available, understanding the implications of dataset differences for conservation planning and decision-making is essential.
 
 <!--Understanding these issues points toward solutions for providers and users of these datasets.-->
 
-(223 words; 1593 char with spaces)
+(184 words; 1307 char with spaces)
 
 -----
 
